--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         <p>‎ </p>
         <p>To see about the school <a href="https://ormistonswbacademy.org.uk/our-academy/welcome">click here!</a></p>
         <p>‎ </p>
-        <p>This website was Coded and brought by Riley Burton.</p>
+        <p>This website was Coded and brought by Riley Burton. Any Issues contact me at 'rb@rileyb.co.uk'</p>
         <p>Check out Riley B's Website <a href="https://rileyb.co.uk">https://rileyb.co.uk</a></p>
         <p>Website made in 1 day</p>
         <p>Coded completely in html, js, css</p>
