--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
             </div>
             <div class="footer-section">
                 <h2>Connect</h2>
-                <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="images/youtube.png" alt="YouTube"></a>
-                <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
-                <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
+                <a href="https://www.facebook.com/oswbacademy/"><img src="images/facebook.png" alt="Facebook"></a>
+                <a href="https://www.youtube.com/channel/UC8f6l02EZC88nWGUzEtCyhA"><img src="images/youtube.png" alt="YouTube"></a>
+                <a href="https://x.com/oswbacademy?mx=2"><img src="images/twitter.png" alt="Twitter"></a>
+                <a href="https://www.instagram.com/oswbagram/"><img src="images/instagram.png" alt="Instagram"></a>
             </div>
         </div>
         <div class="footer-bottom">
