--- a/about.html
+++ b/about.html
@@ -27,6 +27,7 @@
         <p>Check out Riley B's Website <a href="https://rileyb.co.uk">https://rileyb.co.uk</a></p>
         <p>Website made in 1 day</p>
         <p>Coded completely in html, js, css</p>
+        <p>NOTE: THIS IS NOT THE OFFLICIAL SWB WEBSITE TO SEE THERE WEBSITE <a href="https://ormistonswbacademy.org.uk">Click here!</a></p></p>
 
 
     </section>
