--- a/about.html
+++ b/about.html
@@ -13,7 +13,8 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="homework.html">Contact</a></li>
+                <li><a href="homework.html">Homework</a></li>
             </ul>
         </nav>
     </header>
@@ -23,11 +24,11 @@
         <p>‎ </p>
         <p>To see about the school <a href="https://ormistonswbacademy.org.uk/our-academy/welcome">click here!</a></p>
         <p>‎ </p>
-        <p>This website was Coded and brought by Riley Burton. Any Issues contact me at 'rb@rileyb.co.uk'</p>
+        <p>This website was Coded and brought by Riley Burton. Any issues Contact me at 'rb@rileyb.co.uk'</p>
         <p>Check out Riley B's Website <a href="https://rileyb.co.uk">https://rileyb.co.uk</a></p>
-        <p>Website made in 1 day</p>
-        <p>Coded completely in html, js, css</p>
-        <p>NOTE: THIS IS NOT THE OFFLICIAL SWB WEBSITE TO SEE THERE WEBSITE <a href="https://ormistonswbacademy.org.uk">Click here!</a></p></p>
+        <p>Website made in 1 day just the pages about, home and contact</p>
+        <p>Coded completely in html, css</p>
+        <p>NOTE: THIS IS NOT THE OFFICIL Ormiston SWB Academy WEBSITE TO SEE THE OFFICIAL WEBSITE <a href= "https://ormistonswbacademy.org.uk/">CLICK HERE!</a></p>
 
 
     </section>
@@ -49,13 +50,15 @@
                 <h2>Connect</h2>
                 <a href="https://www.facebook.com/oswbacademy/"><img src="images/facebook.png" alt="Facebook"></a>
                 <a href="https://www.youtube.com/channel/UC8f6l02EZC88nWGUzEtCyhA"><img src="images/youtube.png" alt="YouTube"></a>
-                <a href="https://x.com/oswbacademy?mx=2"><img src="images/twitter.png" alt="Twitter"></a>
+                <a href="https://x.com/oswbacademy"><img src="images/twitter.png" alt="Twitter"></a>
                 <a href="https://www.instagram.com/oswbagram/"><img src="images/instagram.png" alt="Instagram"></a>
             </div>
         </div>
         <div class="footer-bottom">
+            <p>&copy; 2024 Ormiston SWB Academy. All rights reserved.</p>
         </div>
     </footer>
+    
 
 </body>
 </html>
