--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="homework.html">Homework</a></li>
             </ul>
         </nav>
     </header>
@@ -41,12 +42,14 @@
                 <h2>Connect</h2>
                 <a href="https://www.facebook.com/oswbacademy/"><img src="images/facebook.png" alt="Facebook"></a>
                 <a href="https://www.youtube.com/channel/UC8f6l02EZC88nWGUzEtCyhA"><img src="images/youtube.png" alt="YouTube"></a>
-                <a href="https://x.com/oswbacademy?mx=2"><img src="images/twitter.png" alt="Twitter"></a>
+                <a href="https://x.com/oswbacademy"><img src="images/twitter.png" alt="Twitter"></a>
                 <a href="https://www.instagram.com/oswbagram/"><img src="images/instagram.png" alt="Instagram"></a>
             </div>
         </div>
         <div class="footer-bottom">
+            <p>&copy; 2024 Ormiston SWB Academy. All rights reserved.</p>
         </div>
     </footer>
+    
 </body>
 </html>
