--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
         <p>Check out Riley B's Website <a href="https://rileyb.co.uk">https://rileyb.co.uk</a></p>
         <p>Website made in 1 day just the pages about, home and contact</p>
         <p>Coded completely in html, css</p>
-        <p>NOTE: THIS IS NOT THE OFFICIL Ormiston SWB Academy WEBSITE TO SEE THE OFFICIAL WEBSITE <a href= "https://ormistonswbacademy.org.uk/">CLICK HERE!</a></p>
+        <p>NOTE: THIS IS NOT THE OFFICIAL Ormiston SWB Academy WEBSITE TO SEE THE OFFICIAL WEBSITE <a href= "https://ormistonswbacademy.org.uk/">CLICK HERE!</a></p>
 
 
     </section>
