--- a/homework.html
+++ b/homework.html
@@ -35,13 +35,15 @@
         <h2>Homeworks:</h2>
         <div class="container">
             <div class="box" onclick="window.location.href='/';">
-                <h2>Geography Homework Russia- superpower </h2>
+                <h2>Geography Homework </h2>
             </div>
             <div class="content-item">
                 <h3>Geography Homework</h3>
                 <p>To view this homework click the text below</p>
                 <a href="Homeworks/Geography/geography-russia-superpower.html" class="btn">VIEW HERE!</a>
             </div>
+            <h2>Science Homework </h2>
+
             <div class="content-item">
                 <h3>Science Homework - Adaptations</h3>
                 <p>To view this homework click the text below</p>
