--- a/homework.html
+++ b/homework.html
@@ -45,8 +45,16 @@
 
             <div class="content-item">
                 <h3>Science Homework - Adaptations</h3>
-                <p>To view this homework click the text below</p>
+                <p>To view this homework click the text below 26/06/24</p>
                 <a href="Homeworks/Science/adaptations.html" class="btn">VIEW HERE!</a>
+            </div>
+        
+                    <h2>Science Homework </h2>
+        
+                    <div class="content-item">
+                <h3>PRE Homework Booklet</h3>
+                <p>To view this homework click the text below</p>
+                <a href="Homeworks/" class="btn">VIEW HERE!</a>
             </div>
             <!-- Add more boxes as needed -->
         </div>
