--- a/homework.html
+++ b/homework.html
@@ -54,7 +54,7 @@
                     <div class="content-item">
                 <h3>PRE Homework Booklet</h3>
                 <p>To view this homework click the text below</p>
-                <a href="Homeworks/" class="btn">VIEW HERE!</a>
+                <a href="Homeworks/PRE/index.html" class="btn">VIEW HERE!</a>
             </div>
             <!-- Add more boxes as needed -->
         </div>
