--- a/homework.html
+++ b/homework.html
@@ -49,7 +49,7 @@
                 <a href="Homeworks/Science/adaptations.html" class="btn">VIEW HERE!</a>
             </div>
         
-                    <h2>Science Homework </h2>
+                    <h2>PRE Homework</h2>
         
                     <div class="content-item">
                 <h3>PRE Homework Booklet</h3>
