--- a/homework.html
+++ b/homework.html
@@ -48,12 +48,17 @@
                 <p>To view this homework click the text below 26/06/24</p>
                 <a href="Homeworks/Science/adaptations.html" class="btn">VIEW HERE!</a>
             </div>
+            <div class="content-item">
+                <h3>Science Homework - chromatography Questions</h3>
+                <p>To view this homework click the text below 03/07/24</p>
+                <a href="Homeworks/Science/chromatography.html" class="btn">VIEW HERE!</a>
+            </div>
         
                     <h2>PRE Homework</h2>
         
                     <div class="content-item">
                 <h3>PRE Homework Booklet</h3>
-                <p>To view this homework click the text below</p>
+                <p>To view this homework click the text below  03/07/24</p>
                 <a href="Homeworks/PRE/index.html" class="btn">VIEW HERE!</a>
             </div>
             <!-- Add more boxes as needed -->
