--- a/Homeworks/Science/chromatography.html
+++ b/Homeworks/Science/chromatography.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chromatography Experiment</title>
+    <title>Chromatography Questions</title>
     <style>
         body {
             font-family: Arial, sans-serif;
