--- a/classwork.html
+++ b/classwork.html
@@ -3,36 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About My School</title>
+    <title>SWB Academy</title>
     <link rel="stylesheet" href="css/style.css">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>SWB Academy</h1>
+        <div class="logo">
+            <img src="images/logo.png" alt="SWB Academy Logo">
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="homework.html">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href="homework.html">Homework</a></li>
                 <li><a href="classwork.html">Classwork</a></li>
+
             </ul>
         </nav>
     </header>
 
-    <section id="about" class="content-section">
-        <h2>About the School</h2>
-        <p>‎ </p>
-        <p>To see about the school <a href="https://ormistonswbacademy.org.uk/our-academy/welcome">click here!</a></p>
-        <p>‎ </p>
-        <p>This website was Coded and brought by Riley Burton. Any issues Contact me at 'rb@rileyb.co.uk'</p>
-        <p>Check out Riley B's Website <a href="https://rileyb.co.uk">https://rileyb.co.uk</a></p>
-        <p>Website made in 1 day just the pages about, home and contact</p>
-        <p>Coded completely in html, css</p>
-        <p>NOTE: THIS IS NOT THE OFFICIL Ormiston SWB Academy WEBSITE TO SEE THE OFFICIAL WEBSITE <a href= "https://ormistonswbacademy.org.uk/">CLICK HERE!</a></p>
-
-
+    <section id="home" class="hero">
+        <h2>Welcome to Riley Burton's Class Work</h2>
+        <p>What I have done in class</p>
     </section>
+
+
+    <section id="homework" class="content-section">
+        <h2>Work:</h2>
+        <div class="container">
+            <h2>Art Work</h2>
+            <div class="content-item">
+                <h3>Art - Maria Rivans</h3>
+                <p>To view this poster click the text below</p>
+                <a href="Homeworks/Art/Maria-Rivans/Maria Rivans.html" class="btn">VIEW HERE!</a>
+            </div>
+
+        </div>
+    </section>
+
     <footer>
         <div class="footer-container">
             <div class="footer-section">
@@ -56,10 +69,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 Ormiston SWB Academy. All rights reserved.</p>
         </div>
     </footer>
-    
-
 </body>
 </html>
