--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="homework.html">Homework</a></li>
+                <li><a href="classwork.html">Classwork</a></li>
             </ul>
         </nav>
     </header>
+    <li>hello</li>
 
     <section id="home" class="hero">
         <h2>Welcome to Ormiston SWB Academy</h2>
