--- a/homework.html
+++ b/homework.html
@@ -21,6 +21,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="homework.html">Homework</a></li>
+                <li><a href="classwork.html">Classwork</a></li>
             </ul>
         </nav>
     </header>
@@ -42,26 +43,11 @@
                 <a href="Homeworks/Geography/geography-russia-superpower.html" class="btn">VIEW HERE!</a>
             </div>
             <h2>Science Homework </h2>
-
             <div class="content-item">
                 <h3>Science Homework - Adaptations</h3>
-                <p>To view this homework click the text below 26/06/24</p>
+                <p>To view this homework click the text below</p>
                 <a href="Homeworks/Science/adaptations.html" class="btn">VIEW HERE!</a>
             </div>
-            <div class="content-item">
-                <h3>Science Homework - chromatography Questions</h3>
-                <p>To view this homework click the text below 03/07/24</p>
-                <a href="Homeworks/Science/chromatography.html" class="btn">VIEW HERE!</a>
-            </div>
-        
-                    <h2>PRE Homework</h2>
-        
-                    <div class="content-item">
-                <h3>PRE Homework Booklet</h3>
-                <p>To view this homework click the text below  03/07/24</p>
-                <a href="Homeworks/PRE/index.html" class="btn">VIEW HERE!</a>
-            </div>
-            <!-- Add more boxes as needed -->
         </div>
     </section>
 
