--- a/homework.html
+++ b/homework.html
@@ -48,6 +48,14 @@
                 <p>To view this homework click the text below</p>
                 <a href="Homeworks/Science/adaptations.html" class="btn">VIEW HERE!</a>
             </div>
+            </div>
+            <h2>PRE Homework </h2>
+            <div class="content-item">
+                <h3>PRE Homework - Homework Booklet </h3>
+                <p>To view this homework click the text below</p>
+                <a href="Homeworks/PRE/index.html" class="btn">VIEW HERE!</a>
+            </div>
+
         </div>
     </section>
 
