--- a/Homeworks/PRE/week3.html
+++ b/Homeworks/PRE/week3.html
@@ -9,16 +9,13 @@
 <body>
     <h1>Week 3: PRE Homework</h1>
     <ul>
-        <li>Some people may believe in God's existence because of trees as they give us oxygen.</li>
-        <li>Some people may believe in God's existence because of bees because they produce food for bugs to eat and are crucial for us to live.</li>
-        <li>Some people may believe in God's existence because of Volcanic Eruptions because they used to happen very often before humans, now humans are on earth they don’t.</li>
+        <p>Some people may believe in God's existence because of trees as they give us oxygen.</p>
+        <p>Some people may believe in God's existence because of bees because they produce food for bugs to eat and are crucial for us to live.</p>
+        <p>Some people may believe in God's existence because of Volcanic Eruptions because they used to happen very often before humans, now humans are on earth they don’t.</p>
+        <img src="week3.png" alt="Religious and Humanist Values">
     </ul>
     <a href="index.html">Back to Home</a>
 </body>
-<footer>
-    <p>Author: Riley Burton</p>
-    <p><a href="mailto:rb@rileyb.co.uk">rb@rileyb.co.uk</a></p>
-  </footer>
-  <img src="week3.png" alt="Religious and Humanist Values">
+
 
 </html>
