--- a/Homeworks/PRE/index.html
+++ b/Homeworks/PRE/index.html
@@ -4,54 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PRE Homework</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #f4f4f4;
-        }
-        h1 {
-            text-align: center;
-        }
-        .week-list {
-            list-style: none;
-            padding: 0;
-        }
-        .week-list li {
-            margin: 10px 0;
-        }
-        .week-list a {
-            text-decoration: none;
-            color: #333;
-            background-color: #e2e2e2;
-            padding: 10px 15px;
-            border-radius: 5px;
-        }
-        .week-list a:hover {
-            background-color: #d4d4d4;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
+        <h1>PRE Homework</h1>
+        <p>Author: Riley Burton</p>
+        <ul class="week-list">
+            <li><a href="week1.html">Week 1</a></li>
+            <li><a href="week2.html">Week 2</a></li>
+            <li><a href="week3.html">Week 3</a></li>
+            <li><a href="week4.html">Week 4</a></li>
+            <li><a href="week5.html">Week 5</a></li>
+            <li><a href="week6.html">Week 6</a></li>
+            <li><a href="week7.html">Week 7</a></li>
 
-    <h1>PRE Homework</h1>
-    <ul class="week-list">
-        <li><a href="week1.html">Week 1</a></li>
-        <li><a href="week2.html">Week 2</a></li>
-        <li><a href="week3.html">Week 3</a></li>
-        <li><a href="week4.html">Week 4</a></li>
-        <li><a href="week5.html">Week 5</a></li>
-        <li><a href="week6.html">Week 6</a></li>
-    </ul>
+        </ul>
+        <ul class="week-list">
+            <p>Email me: <a href="mailto:rb@rileyb.co.uk">rb@rileyb.co.uk</a></p>
+            <p>Visit my website <a href="https://rileyb.co.uk">rileyb.co.uk!</a></p>
 
-    <center>
-        This website was coded by Riley Burton
-        <p>This Homework was Compleated by Riley Burton</p>
-      </center>
+
+        </ul>
+
+    </div>
+
 </body>
-<footer>
-    <p>Author: Riley Burton</p>
-    <p><a href="mailto:rb@rileyb.co.uk">rb@rileyb.co.uk</a></p>
-  </footer>
 </html>
